@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: nodesel_restartdfs.c,v 1.37 2010/09/27 17:20:23 bzfheinz Exp $"
+#pragma ident "@(#) $Id: nodesel_restartdfs.c,v 1.38 2010/10/05 20:02:30 bzfheinz Exp $"
 
 /**@file   nodesel_restartdfs.c
  * @ingroup NODESELECTORS
@@ -41,7 +41,8 @@
  * Default parameter settings
  */
 
-#define SELECTBESTFREQ                0 /**< frequency for selecting the best node instead of the deepest one */
+#define SELECTBESTFREQ              100 /**< frequency for selecting the best node instead of the deepest one */
+#define COUNTONLYLEAFS             TRUE /**< only count leaf nodes or all nodes */
 
 
 
@@ -49,7 +50,9 @@
 struct SCIP_NodeselData
 {
    SCIP_Longint          lastrestart;        /**< node number where the last best node was selected */
+   SCIP_Longint          nprocessedleafs;    /**< number of processed leafs since the last restart */
    int                   selectbestfreq;     /**< frequency for selecting the best node instead of the deepest one */
+   SCIP_Bool             countonlyleafs;     /**< only count leaf nodes or all nodes */
 };
 
 
@@ -109,7 +112,9 @@ SCIP_DECL_NODESELINITSOL(nodeselInitsolRestartdfs)
    nodeseldata = SCIPnodeselGetData(nodesel);
    assert(nodeseldata != NULL);
 
+   /* reset counters */
    nodeseldata->lastrestart = 0;
+   nodeseldata->nprocessedleafs = 0;
 
    return SCIP_OKAY;
 }
@@ -132,15 +137,23 @@ SCIP_DECL_NODESELSELECT(nodeselSelectRestartdfs)
    {
       SCIP_NODESELDATA* nodeseldata;
       SCIP_Longint nnodes;
-
+      
       /* get node selector user data */
       nodeseldata = SCIPnodeselGetData(nodesel);
       assert(nodeseldata != NULL);
 
+      /* increase the number of processed leafs since we are in a leaf */
+      nodeseldata->nprocessedleafs++;
+
       nnodes = SCIPgetNNodes(scip);
-      if( nnodes - nodeseldata->lastrestart >= nodeseldata->selectbestfreq )
+
+      /* check if in case of "only leafs" the number processed leafs exceeds the frequency or in the other case the
+       * number of processed node does it */
+      if( (nodeseldata->countonlyleafs && nodeseldata->nprocessedleafs >= nodeseldata->selectbestfreq) 
+         || (!nodeseldata->countonlyleafs && nnodes - nodeseldata->lastrestart >= nodeseldata->selectbestfreq ) )
       {
          nodeseldata->lastrestart = nnodes;
+         nodeseldata->nprocessedleafs = 0;
          *selnode = SCIPgetBestboundNode(scip);
       }
       else
@@ -150,7 +163,7 @@ SCIP_DECL_NODESELSELECT(nodeselSelectRestartdfs)
             *selnode = SCIPgetBestLeaf(scip);
       }
    }
-
+   
    return SCIP_OKAY;
 }
 
@@ -176,7 +189,10 @@ SCIP_RETCODE SCIPincludeNodeselRestartdfs(
 
    /* allocate and initialize node selector data; this has to be freed in the destructor */
    SCIP_CALL( SCIPallocMemory(scip, &nodeseldata) );
+   nodeseldata->lastrestart = 0;
+   nodeseldata->nprocessedleafs = 0;
    nodeseldata->selectbestfreq = SELECTBESTFREQ;
+   nodeseldata->countonlyleafs = COUNTONLYLEAFS;
 
    /* include node selector */
    SCIP_CALL( SCIPincludeNodesel(scip, NODESEL_NAME, NODESEL_DESC, NODESEL_STDPRIORITY, NODESEL_MEMSAVEPRIORITY,
@@ -190,6 +206,12 @@ SCIP_RETCODE SCIPincludeNodeselRestartdfs(
          "nodeselection/restartdfs/selectbestfreq",
          "frequency for selecting the best node instead of the deepest one",
          &nodeseldata->selectbestfreq, FALSE, SELECTBESTFREQ, 0, INT_MAX, NULL, NULL) );
+   
+   /* add node selector parameters */
+   SCIP_CALL( SCIPaddBoolParam(scip,
+         "nodeselection/restartdfs/countonlyleafs",
+         "count only leaf nodes (otherwise all nodes)?",
+         &nodeseldata->countonlyleafs, FALSE, COUNTONLYLEAFS, NULL, NULL) );
    
    return SCIP_OKAY;
 }
